--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
     <head> 
-        <title>Exemplo do atributo href</title> 
+        <title>Alteração de titulo</title> 
     </head> 
     <body> 
         <h1>Exemplo do atributo href</h1> 
