--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
             <a href="https://www.freecodecamp.org/contribute/">A página de contribuição do freeCodeCamp</a> 
             mostra para você como e onde você pode contribuir com a comunidade e com o crescimento do freeCodeCamp. 
         </p> 
-        <li>Windows course</li>
+        <li>Windows course - merge com lista</li>
     </body> 
 </html>
