--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body> 
         <h1>Exemplo do atributo href</h1> 
         <p> 
-            <a href="https://www.freecodecamp.org/contribute/">A página de contribuição do freeCodeCamp</a> 
+            <a href="https://www.freecodecamp.org/contribute/">A página de contribuição do freeCodieCamp<teste/a > 
             mostra para você como e onde você pode contribuir com a comunidade e com o crescimento do freeCodeCamp. 
         </p> 
         <li>Windows course - merge com lista</li>
